--- a/fc-board/src/main/resources/application.yml
+++ b/fc-board/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/board?useSSL=false&serverTimezone=Asia/Seoul
-        username: root
-        password:
+        url: jdbc:mysql://awseb-e-8zmrqhfgtd-stack-awsebrdsdatabase-ykbbodhxecne.c98qooqka9nj.ap-northeast-2.rds.amazonaws.com/board?useSSL=false&serverTimezone=Asia/Seoul
+        username: fastcam
+        password: fastcam1!
+#        url: jdbc:mysql://localhost:3306/board?useSSL=false&serverTimezone=Asia/Seoul
+#        username: root
+#        password:
         driver-class-name: com.mysql.jdbc.Driver
     jpa:
         hibernate:
